force-app/main/default/objects/VATLoan__c/VATLoan__c.object-meta.xml
<CustomObject>
    <label>VAT+Loan</label>
    <nameField>
        <displayFormat>VTLN-{000000}</displayFormat>
        <label>VAT+LOAN ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VAT+Loan</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>