force-app/main/default/objects/VATLoan__c/fields/AmountBuyingInclTaxFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountBuyingInclTaxFormu__c</fullName>
    <formula>VATInvID__r.AmountVATBuyingIncludeVAT__c</formula>
    <label>AMOUNT BUYING INCL TAX-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>