force-app/main/default/objects/VATLoan__c/fields/AmountSellingInclTaxFormu__c.field-meta.xml
<CustomField>
    <fullName>AmountSellingInclTaxFormu__c</fullName>
    <formula>VATInvID__r.AmountVATSellingIncludeVAT__c</formula>
    <label>AMOUNT SELLING INCL TAX-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>