force-app/main/default/objects/VATLoan__c/fields/VATInvID__c.field-meta.xml
<CustomField>
    <fullName>VATInvID__c</fullName>
    <label>VAT INV ID</label>
    <referenceTo>VAT_INVOICE__c</referenceTo>
    <relationshipLabel>VAT+LOAN</relationshipLabel>
    <relationshipName>VATLoan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>